<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF5F6FA">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="18dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/myself"
            android:textColor="#1A1A1E"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/avatar"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="29dp"
            android:background="@color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:shapeAppearance="@style/CircleStyle"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/name"
            android:textColor="#1A1A1E"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/phone_number"
            app:layout_constraintLeft_toRightOf="@+id/avatar"
            app:layout_constraintTop_toTopOf="@+id/avatar" />

        <TextView
            android:id="@+id/phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintBottom_toBottomOf="@id/avatar"
            app:layout_constraintLeft_toLeftOf="@id/nickname"
            app:layout_constraintTop_toBottomOf="@id/nickname"
            tools:text="11111111111" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="68dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/phone_number">

            <TextView
                android:id="@+id/privacy"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/privacyPolicy"
                android:textColor="#5A5A67"
                android:textSize="14sp"
                app:drawableStartCompat="@drawable/img_privacy" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="#F5F6FA" />

            <TextView
                android:id="@+id/disclaimer"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/disclaimer"
                android:textColor="#5A5A67"
                android:textSize="14sp"
                app:drawableStartCompat="@drawable/img_disclaimer" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="#F5F6FA" />

            <TextView
                android:id="@+id/sign_up"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:drawablePadding="5dp"
                android:gravity="center_vertical"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/createAccount"
                android:textColor="#5A5A67"
                android:textSize="14sp"
                app:drawableLeftCompat="@drawable/img_sign_up" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="#F5F6FA" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:drawablePadding="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/releaseDate"
                    android:textColor="#5A5A67"
                    android:textSize="14sp"
                    app:drawableLeftCompat="@drawable/img_release_date" />

                <TextView
                    android:id="@+id/tv_pub_time"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_gravity="end"
                    android:gravity="center"
                    android:text="@string/_2020_2_2"
                    android:textColor="#5A5A67"
                    android:textSize="12sp" />
            </FrameLayout>


            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="#F5F6FA" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:drawablePadding="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/sdkVersion"
                    android:textColor="#5A5A67"
                    android:textSize="14sp"
                    app:drawableLeftCompat="@drawable/img_sdk_version" />

                <TextView
                    android:id="@+id/tv_sdk_version"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_gravity="end"
                    android:gravity="center_vertical"
                    android:text="@string/_2020_2_2"
                    android:textColor="#5A5A67"
                    android:textSize="12sp" />
            </FrameLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="#F5F6FA" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:drawablePadding="5dp"
                    android:gravity="center_vertical"
                    android:text="@string/softwareVersion"
                    android:textColor="#5A5A67"
                    android:textSize="14sp"
                    app:drawableLeftCompat="@drawable/img_software_version" />

                <TextView
                    android:id="@+id/tv_app_version"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_gravity="end"
                    android:gravity="center_vertical"
                    android:text="@string/softwareVersionCode"
                    android:textColor="#5A5A67"
                    android:textSize="12sp" />
            </FrameLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>