<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF5F6FA">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/back"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:paddingStart="16dp"
        android:paddingTop="14dp"
        android:paddingEnd="16dp"
        android:paddingBottom="14dp"
        android:scaleType="centerCrop"
        android:src="@drawable/back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/createCall"
        android:textColor="#FF1A1A1E"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/back" />

    <EditText
        android:id="@+id/edit_phone_number"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="8dp"
        android:autofillHints="phone"
        android:background="@drawable/shape_bg_round_white_input"
        android:drawableStart="@drawable/searching"
        android:drawablePadding="4dp"
        android:gravity="center_vertical"
        android:hint="@string/searchingThePhoneNumber"
        android:inputType="phone"
        android:maxLength="11"
        android:textColorHint="#FFB4B3CE"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/search"
        app:layout_constraintTop_toBottomOf="@id/back" />

    <Button
        android:id="@+id/search"
        android:layout_width="84dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:backgroundTint="#FF294BFF"
        android:text="@string/added"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/edit_phone_number"
        app:layout_constraintLeft_toRightOf="@id/edit_phone_number"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/edit_phone_number" />

    <View
        android:id="@+id/contactDecor"
        android:layout_width="4dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:background="#FF294BFF"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_phone_number" />

    <TextView
        android:id="@+id/recentContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/recentContact"
        android:textColor="#FF1A1A1E"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/contactDecor"
        app:layout_constraintLeft_toRightOf="@id/contactDecor"
        app:layout_constraintTop_toTopOf="@id/contactDecor" />

    <TextView
        android:id="@+id/selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:textColor="#FFB4B4CC"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/recentContact"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/recentContact"
        tools:text="已选择 0/8" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contactDecor" />

    <TextView
        android:id="@+id/empty_contact"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:paddingBottom="120dp"
        android:text="@string/searchingToContact"
        android:textColor="#FFB4B4CC"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contactDecor" />

    <androidx.cardview.widget.CardView
        android:id="@+id/makingCall"
        android:layout_width="168dp"
        android:layout_height="40dp"
        android:layout_marginBottom="38dp"
        app:cardBackgroundColor="#FFB4B4CC"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/makingCall"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </androidx.cardview.widget.CardView>

    <org.ar.call.widgets.LoadingView
        android:id="@+id/loading_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <FrameLayout
        android:id="@+id/calling_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />
</androidx.constraintlayout.widget.ConstraintLayout>