<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F6FA"
    tools:context=".views.LoginActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/first_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:paddingBottom="20dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/icon"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="66dp"
                android:src="@mipmap/ic_launcher"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/phone_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/phoneNumber"
                android:textColor="#18191D"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/icon" />

            <EditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:autofillHints="phone"
                android:background="@drawable/shape_bg_round_white_input"
                android:hint="@string/pleaseInputThePhoneNumber"
                android:inputType="phone"
                android:textColor="#666666"
                app:layout_constraintTop_toBottomOf="@id/phone_title"
                tools:ignore="LabelFor" />

            <Button
                android:id="@+id/phone_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="#294BFF"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:stateListAnimator="@null"
                android:text="@string/confirm"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/phone_number" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/second_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/second_page_scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/page_title"
                    android:layout_width="wrap_content"
                    android:layout_height="44dp"
                    android:gravity="center"
                    android:text="@string/settingInformation"
                    android:textColor="#1A1A1E"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/avatar_parent"
                    android:layout_width="88dp"
                    android:layout_height="88dp"
                    android:layout_marginTop="88dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="0dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/avatar"
                        android:layout_width="88dp"
                        android:layout_height="88dp"
                        tools:src="@mipmap/ic_launcher" />

                    <TextView
                        android:id="@+id/avatar_replacement"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:background="#294BFF"
                        android:gravity="center"
                        android:paddingTop="5dp"
                        android:paddingBottom="6dp"
                        android:text="@string/replacement"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/nickname_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="82dp"
                    android:text="@string/nickname"
                    android:textColor="#18191D"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/avatar_parent" />

                <EditText
                    android:id="@+id/nickname_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="16dp"
                    android:autofillHints="@null"
                    android:background="@drawable/shape_bg_round_white_input"
                    android:hint="@string/pleaseInputTheNickname"
                    android:inputType="text"
                    android:maxLength="24"
                    android:textSize="12sp"
                    app:layout_constraintTop_toBottomOf="@id/nickname_title" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/nickname_dice"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginEnd="9dp"
                    android:padding="6dp"
                    android:src="@drawable/dice"
                    app:layout_constraintBottom_toBottomOf="@id/nickname_edit"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintRight_toRightOf="@id/nickname_edit"
                    app:layout_constraintTop_toTopOf="@id/nickname_edit" />

                <Button
                    android:id="@+id/complete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:backgroundTint="#294BFF"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:stateListAnimator="@null"
                    android:text="@string/complete"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@id/nickname_edit" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <View
            android:id="@+id/choose_avatar_parent_shadow"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/behavior_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintGuide_percent=".34"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/choose_avatar_parent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/shape_bg_white_top_corner_round"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@id/behavior_guideline">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:text="@string/settingAvatar"
                android:textColor="#18191D"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/avatar_confirm"
                android:layout_width="wrap_content"
                android:layout_height="64dp"
                android:gravity="center"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/confirm"
                android:textColor="#294BFF"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/avatar_grid"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/avatar_confirm" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/loading_mask"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#33000000" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/loading_view"
        android:layout_width="126dp"
        android:layout_height="126dp"
        android:src="@drawable/loading_progress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/loading_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="loading_mask,loading_view" />
</androidx.constraintlayout.widget.ConstraintLayout>